--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link href= "styles/holding_page.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <h1>Coming Soon</h1>
+    <div class="container-fluid bg-1 text-center">
+    <img src="images/pic_n_mix.jpg" alt="logo" width="150">
+    <h1>Pick'N'Fix Coming Soon</h1>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+    
+    <footer>
+        <p>&copy; 2023 Created by Bandwidth of Brothers!!</p>
+    </footer>
+
 </body>
 </html>
