--- a/signup.html
+++ b/signup.html
@@ -5,9 +5,54 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <link href= "styles/signup.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <h1>Coming Soon</h1>
+
+  <div class="signup-box">
+    <h1>Sign Up</h1>
+    <h4>It's free and only takes a minute</h4>
+    <form>
+      <label>First Name</label>
+      <input type="text" placeholder="" />
+      <label>Last Name</label>
+      <input type="text" placeholder="" />
+      <label>Email</label>
+      <input type="email" placeholder="" />
+      <label>Password</label>
+      <input type="password" placeholder="" />
+      <label>Confirm Password</label>
+      <input type="password" placeholder="" />
+      <input type="button" value="Submit" />
+    <closeform></closeform></form>
+   
+    <p>
+      By clicking the Sign Up button,you agree to our <br />
+      <a href="#">Terms and Condition</a> and <a href="#">Policy Privacy</a>
+    </p>
+
+  </div>
+  <p class="para-2">
+    Already have an account? <a href="login.html">Login here</a>
+  </p>
+  
+  <div class="login-box">
+    <h1>Login</h1>
+    <form>
+      <label>Email</label>
+      <input type="email" placeholder="" />
+      <label>Password</label>
+      <input type="password" placeholder="" />
+      <input type="button" value="Submit" />
+    <closeform></closeform></form>
+  </div>
+  <p class="para-2">
+    Not have an account? <a href="signup.html">Sign Up Here</a>
+  </p>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </body>
 </html>
