--- a/home.html
+++ b/home.html
@@ -41,13 +41,16 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/pic_n_mix.jpg" class="d-block w-30" alt="logo">
+            <img src="images/john_wick.jpeg" class="d-block w-30" alt="john_wick">
           </div>
           <div class="carousel-item">
-            <img src="images/pic_n_mix.jpg" class="d-block w-30" alt="logo">
+            <img src="images/dungeons2.jpg" class="d-block w-30" alt="dungeons">
           </div>
           <div class="carousel-item">
-            <img src="images/pic_n_mix.jpg" class="d-block w-10" alt="logo">
+            <img src="images/shazam.jpeg" class="d-block w-30" alt="shazam2">
+          </div>
+          <div class="carousel-item">
+            <img src="images/65.jpg" class="d-block w-30" alt="65">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -60,5 +63,35 @@
         </button>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-</body>
+
+    <div class="container-fluid bg-1 text-center">
+      <img src="images/pic_n_mix.jpg" alt="logo" width="250">
+      <h1>Welcome to Pick'N'Fix!</h1>
+      <h2>Your 1-Stop-Shop for all Cinema Listings, Movie Reviews and Recommendations!</h2>
+      </div>
+
+      <div class="container-fluid bg-3 text-center">
+      <h3>Know what you want to watch, but not where to see it? Our site will find all the local listings in your area!</h3>
+      <img src="images/Chickens_movies.jpg" alt="Chickens_movies" width="250">
+      </div>
+      
+      <div class="container-fluid bg-2 text-center">
+        <h4>Need Inspiration? Tell us a Genre you fancy and our Movie Generator will suggest a film to watch!</h4>
+        <img src="images/chick1.jpg" alt="chick1" width="250">
+      </div>
+
+      <div class="container-fluid bg-4 text-center">
+        <h4>Want to check out Reviews of the latest Movies? We have you covered! </h4>
+        <img src="images/chick2jpg.jpg" alt="chick2" width="250">
+      </div>
+
+  <footer>
+      <p>&copy; 2023 Created by Bandwidth of Brothers!!</p>
+  </footer>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
+      
+  </body>
+
 </html>
