--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link href= "styles/signup.css" rel="stylesheet" type="text/css" />
+        <link href= "styles/signup.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <h1>Coming Soon</h1>
@@ -80,5 +80,11 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-</body>
+    
+  
+  <footer>
+      <p>&copy; 2023 Created by Bandwidth of Brothers!!</p>
+  </footer>
+
+  </body>
 </html>
