signup page styling changed

--- a/signup.html
+++ b/signup.html
@@ -3,41 +3,45 @@
 <head>
     <title>Pick'N'Flix - Coming Soon</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-        <link href= "styles/signup.css" rel="stylesheet" type="text/css" />
+    <link href= "styles/signup.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
   <h1>Coming Soon</h1>
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./signup.html">Sign Up</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./info.html">About Us</a>
-            </li>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </ul>
-        </div>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./signup.html">Sign Up</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./info.html">About Us</a>
+          </li>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-  <div class="signup-box">
-    <h1>Sign Up</h1>
+<div class="split left.flex-container">
+  <div class="centered.flex-container">
+
+  <div class="signup-box.flex-container">
+    <h2>Sign Up</h2>
     <h4>It's free and only takes a minute</h4>
     <form>
       <label>First Name</label>
@@ -53,38 +57,33 @@
       <input type="button" value="Submit" />
     <closeform></closeform></form>
    
-    <p>
-      By clicking the Sign Up button,you agree to our <br />
-      <a href="#">Terms and Condition</a> and <a href="#">Policy Privacy</a>
-    </p>
 
   </div>
-  <p class="para-2">
-    Already have an account? <a href="login.html">Login here</a>
-  </p>
-  
-  <div class="login-box">
-    <h1>Login</h1>
-    <form>
-      <label>Email</label>
-      <input type="email" placeholder="" />
-      <label>Password</label>
-      <input type="password" placeholder="" />
-      <input type="button" value="Submit" />
-    <closeform></closeform></form>
+</div>
+
+
+<div class="split right.flex-container.centered">
+  <div class="centered.flex-container.centered">
+    <div class="login-box.flex-container.centered">
+      <h2>Login</h2>
+      <form>
+        <label>Email</label>
+        <input type="email" placeholder="" />
+        <label>Password</label>
+        <input type="password" placeholder="" />
+        <input type="button" value="Submit" />
+      <closeform></closeform></form>
+     </div>
+
   </div>
-  <p class="para-2">
-    Not have an account? <a href="signup.html">Sign Up Here</a>
-  </p>
+</div>  
+
+<footer>
+  <p>&copy; 2023 Created by Bandwidth of Brothers!!</p>
+</footer>
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-    
-  
-  <footer>
-      <p>&copy; 2023 Created by Bandwidth of Brothers!!</p>
-  </footer>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
   </body>
 </html>
