--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <h1>Coming Soon</h1>
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
+        <div class="container-fluid navbar">
           <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -65,7 +65,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 
     <div class="container-fluid bg-1 text-center">
-      <img src="images/pic_n_mix.jpg" alt="logo" width="250">
+      <a href="index.html"><img src="images/pic_n_mix.png"  alt="logo" width="250"></a>
       <h1>Welcome to Pick'N'Fix!</h1>
       <h2>Your 1-Stop-Shop for all Cinema Listings, Movie Reviews and Recommendations!</h2>
       </div>
