--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="container-fluid bg-1 text-center">
-    <img src="images/pic_n_mix.jpg" alt="logo" width="150">
-    <h1>Pick'N'Fix Coming Soon</h1>
+    <img src="images/pic_n_mix.png" alt="logo" width="150">
+    <h1>Pick'N'Flix Coming Soon</h1>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
     
