sign up page side by side

--- a/signup.html
+++ b/signup.html
@@ -37,34 +37,35 @@
     </div>
   </nav>
 
-<div class="split left.flex-container">
-  <div class="centered.flex-container">
 
-  <div class="signup-box.flex-container">
-    <h2>Sign Up</h2>
-    <h4>It's free and only takes a minute</h4>
-    <form>
-      <label>First Name</label>
-      <input type="text" placeholder="" />
-      <label>Last Name</label>
-      <input type="text" placeholder="" />
-      <label>Email</label>
-      <input type="email" placeholder="" />
-      <label>Password</label>
-      <input type="password" placeholder="" />
-      <label>Confirm Password</label>
-      <input type="password" placeholder="" />
-      <input type="button" value="Submit" />
-    <closeform></closeform></form>
-   
+<div class="split left">
+  <div class="centered">
 
+    <div class="signup-box.flex-containert">
+      <h2>Sign Up</h2>
+       <h4>It's free and only takes a minute</h4>
+      <form>
+        <label>First Name</label>
+        <input type="text" placeholder="" />
+        <label>Last Name</label>
+        <input type="text" placeholder="" />
+        <label>Email</label>
+        <input type="email" placeholder="" />
+        <label>Password</label>
+        <input type="password" placeholder="" />
+        <label>Confirm Password</label>
+        <input type="password" placeholder="" />
+        <input type="button" value="Submit" />
+      <closeform></closeform></form>
+    </div>
   </div>
 </div>
 
 
-<div class="split right.flex-container.centered">
-  <div class="centered.flex-container.centered">
-    <div class="login-box.flex-container.centered">
+
+<div class="split right">
+  <div class="centered">
+    <div class="login-box.flex-container">
       <h2>Login</h2>
       <form>
         <label>Email</label>
@@ -75,10 +76,10 @@
       <closeform></closeform></form>
      </div>
 
-  </div>
+    </div>  
 </div>  
 
-<footer>
+<footer class=".centered.footer">
   <p>&copy; 2023 Created by Bandwidth of Brothers!!</p>
 </footer>
 
