carousel style ammended

--- a/home.html
+++ b/home.html
@@ -40,17 +40,17 @@
 
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/john_wick.jpeg" class="d-block w-30" alt="john_wick">
+          <div class="carousel-item carousel-image bg-img-1 active">
+            <!-- <img src="images/john_wick.jpeg" class="d-block w-30" alt="john_wick"> -->
           </div>
-          <div class="carousel-item">
-            <img src="images/dungeons2.jpg" class="d-block w-30" alt="dungeons">
+          <div class="carousel-item carousel-image bg-img-2">
+            <!-- <img src="images/dungeons2.jpg" class="d-block w-30" alt="dungeons"> -->
           </div>
-          <div class="carousel-item">
-            <img src="images/shazam.jpeg" class="d-block w-30" alt="shazam2">
+          <div class="carousel-item carousel-image bg-img-3">
+            <!-- <img src="images/shazam.jpeg" class="d-block w-30" alt="shazam2"> -->
           </div>
-          <div class="carousel-item">
-            <img src="images/65.jpg" class="d-block w-30" alt="65">
+          <div class="carousel-item carousel-image bg-img-4">
+            <!-- <img src="images/65.jpg" class="d-block w-30" alt="65"> -->
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
