--- a/signup2.html
+++ b/signup2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link href= "styles/signup.css" rel="stylesheet" type="text/css" />
+
     <link href= "styles/mainstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -37,47 +37,55 @@
     </div>
   </nav>
 
-
-<div class="split left">
-  <div class="centered">
-
-    <div class="signup-box.flex-container">
-      <h2>Sign Up</h2>
-       <h4>It's free and only takes a minute</h4>
-      <form>
-        <label>First Name</label>
-        <input type="text" placeholder="" />
-        <label>Last Name</label>
-        <input type="text" placeholder="" />
-        <label>Email</label>
-        <input type="email" placeholder="" />
-        <label>Password</label>
-        <input type="password" placeholder="" />
-        <label>Confirm Password</label>
-        <input type="password" placeholder="" />
-        <input type="button" value="Submit" />
-      <closeform></closeform></form>
-    </div>
-  </div>
+<div class="row">
+<div>
+<form>
+  <h2>Sign Up</h2>
+      <h4>It's free and only takes a minute</h4>
+    <form>
+    <p class="form_group">
+    <label>First Name</label>
+    <input type="text" placeholder="" />
+    </p>
+    <p class="form_group">
+    <label>Last Name</label>
+    <input type="text" placeholder="" />
+    </p>
+    <p class="form_group">
+    <label>Email</label>
+    <input type="email" placeholder="" />
+    </p>
+    <p class="form_group">
+    <label>Password</label>
+    <input type="password" placeholder="" />
+    </p>
+    <p class="form_group"><label>Confirm Password</label>
+    <input type="password" placeholder="" />
+    </p>
+    <input type="button" value="Submit" />
+    <closeform></closeform></form>
+</form></div>
+</div>
+<div class="row">
+<div>
+<form>
+  <h2>Login</h2>
+    <form>
+      <p class="form_group">
+      <label>Email</label>
+      <input type="email" placeholder="" />
+      </p>
+      <p class="form_group">
+      <label>Password</label>
+      <input type="password" placeholder="" />
+      </p>
+      <input type="button" value="Submit" />
+      <closeform></closeform>
+    </form>
+    </form>
+</div>    
 </div>
 
-
-
-<div class="split right">
-  <div class="centered">
-    <div class="login-box.flex-container">
-      <h2>Login</h2>
-      <form>
-        <label>Email</label>
-        <input type="email" placeholder="" />
-        <label>Password</label>
-        <input type="password" placeholder="" />
-        <input type="button" value="Submit" />
-      <closeform></closeform></form>
-     </div>
-
-    </div>  
-</div>
 
 <h2>Test</h2>
 <footer>
