--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <link href= "styles/holding_page.css" rel="stylesheet" type="text/css" />
+    <link href= "styles/mainstyle.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <h1>Coming Soon</h1>
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+                <a class="nav-link" aria-current="page" href="./home.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./signup.html">Sign Up</a>
@@ -41,16 +41,16 @@
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/john_wick.jpeg" class="d-block w-30" alt="john_wick">
+            <img src="images/john_wick.jpeg" class="d-block w-100" alt="john_wick">
           </div>
           <div class="carousel-item">
-            <img src="images/dungeons2.jpg" class="d-block w-30" alt="dungeons">
+            <img src="images/dungeons2.jpg" class="d-block w-100" alt="dungeons">
           </div>
           <div class="carousel-item">
-            <img src="images/shazam.jpeg" class="d-block w-30" alt="shazam2">
+            <img src="images/shazam.jpeg" class="d-block w-100" alt="shazam2">
           </div>
           <div class="carousel-item">
-            <img src="images/65.jpg" class="d-block w-30" alt="65">
+            <img src="images/65.jpg" class="d-block w-100" alt="65">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -90,8 +90,7 @@
   </footer>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-      
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>   
   </body>
 
 </html>
