--- a/signup2.html
+++ b/signup2.html
@@ -28,6 +28,9 @@
           <li class="nav-item">
             <a class="nav-link" href="./info.html">About Us</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="recommendations.html">Recommendations</a>
+          </li>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
