--- a/info.html
+++ b/info.html
@@ -40,7 +40,13 @@
       </div>
     </nav>
 <div class="container-fluid bg-4 text-center">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ornare tempus tortor. Mauris non bibendum purus, quis cursus felis. In hac habitasse platea dictumst. Donec vitae mattis dui. Vestibulum tincidunt, ante eget mollis feugiat, arcu lorem ullamcorper diam, nec semper mauris nibh non mauris. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse malesuada nisl erat, ut aliquam quam feugiat ut. Maecenas dictum mauris eu tellus fringilla, sed euismod velit pulvinar. In in scelerisque sem. Proin dignissim suscipit magna, non volutpat turpis. Proin id nulla placerat tellus sollicitudin pellentesque non eu urna. Praesent bibendum vitae sem in porta. Suspendisse convallis, nibh ut volutpat fringilla, mauris arcu malesuada metus, porttitor porta diam augue vitae purus. Phasellus pharetra lobortis augue, eu consequat sem. Fusce semper dui in purus varius, non ornare nisi tincidunt. Mauris placerat eu mi facilisis commodo.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+    Integer ornare tempus tortor. 
+    Mauris non bibendum purus, quis cursus felis. 
+    In hac habitasse platea dictumst. 
+    Donec vitae mattis dui. 
+    Vestibulum tincidunt, ante eget mollis feugiat, arcu lorem ullamcorper diam, nec semper mauris nibh non mauris. 
+    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse malesuada nisl erat, ut aliquam quam feugiat ut. Maecenas dictum mauris eu tellus fringilla, sed euismod velit pulvinar. In in scelerisque sem. Proin dignissim suscipit magna, non volutpat turpis. Proin id nulla placerat tellus sollicitudin pellentesque non eu urna. Praesent bibendum vitae sem in porta. Suspendisse convallis, nibh ut volutpat fringilla, mauris arcu malesuada metus, porttitor porta diam augue vitae purus. Phasellus pharetra lobortis augue, eu consequat sem. Fusce semper dui in purus varius, non ornare nisi tincidunt. Mauris placerat eu mi facilisis commodo.
 <br>
     Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras pretium accumsan quam congue venenatis. Maecenas quis sollicitudin tortor, in dignissim ipsum. Pellentesque blandit neque quam, id auctor odio egestas sit amet. In aliquet, sem nec finibus faucibus, lacus dolor pretium tellus, non convallis nisi nunc in mi. Integer sit amet sapien ut odio suscipit commodo quis sit amet ante. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc efficitur bibendum dignissim.
 <br>    
