recommendations page updated

--- a/RECOMMENDATIONS2.html
+++ b/RECOMMENDATIONS2.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="./info.html">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="recommendations.html">Recommendations</a>
+                <a class="nav-link" href="RECOMMENDATIONS2.html">Recommendations</a>
               </li>
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -50,48 +50,62 @@
     </div>
 
 
-  <div class="container">
+  <div class="container-fluid bg-1 text-center padding=20px">
     <div class="row">
-        <div class="col-sm-2">
-            <img class="img-fluid" src="images/comedy.jpg"/>
-            <div class="img__description_layer">
-              <p class="img__description">Comedy</p>
-            </div>
+      <div class="img__wrap col-sm-4 columns">
+        <img class="image" src="images/comedy.jpg" alt-"Comedy movies"/>
+        <div class="img__description_layer">
+          <p class="img__description">Comedy</p>
         </div>
-        <div class="col-sm-2 img__wrap">
-            <img class="img-fluid" src="images/action.jpeg"/>
-            <div class="img__description_layer">
-              <p class="img__description">Action</p>
-            </div>
+      </div>
+
+      <div class="img__wrap col-sm-4">
+        <img class="image" src="images/action.jpeg" alt="Action movies"/>
+        <div class="img__description_layer">
+          <p class="img__description">Action</p>
         </div>
-        <div class="col-sm-2 img__wrap">
-            <img class="img-fluid" src="images/horror.jpg"/>
-            <div class="img__description_layer">
-              <p class="img__description">Horror</p>
-            </div>
-          </div>
-          <div class="col-sm-2 img__wrap">
-            <img class="img-fluid" src="images/heroes.jpg"/>
-            <div class="img__description_layer">
-              <p class="img__description">Super Heroes</p>
-            </div>
-          </div>
-          <div class="col-sm-2 img__wrap">
-            <img class="img-fluid" src="images/romance.jpeg"/>
-            <div class="img__description_layer">
-              <p class="img__description">Romance</p>
-          </div>
-        </div>
+      </div>
+
+      <div class="img__wrap col-sm-4">
+        <img class="image" src="images/horror.jpg" alt="horror movies"/>
+        <div class="img__description_layer">
+          <p class="img__description">Horror</p>
         </div>
       </div>
     </div>
+  </div>
 
+  <div class="container-fluid bg-1 text-center padding=20px">
+    <div class="row">
+      <div class="img__wrap col-sm-4">
+        <img class="image" src="images/heroes.jpg" alt="hero movies"/>
+        <div class="img__description_layer">
+          <p class="img__description">Super Heroes</p>
+        </div>
+      </div>
 
-  <form class="input" method="SEARCH">
-  <input class="form-control form-entry" type="search" placeholder="Please input a Genre: Horror/Romance/Action/Heroes/Random" aria-label="Search">
-  <button class="btn btn-outline-success" type="submit">Search</button>
-  </form>
+      <div class="img__wrap col-sm-4">
+        <img class="image" src="images/romance.jpeg" alt="romance movies"/>
+        <div class="img__description_layer">
+          <p class="img__description">Romance</p>
+        </div>
+      </div>
 
+      <div class="img__wrap col-sm-4">
+        <img class="image" src="images/question.jpg" alt="Question marks"/>
+        <div class="img__description_layer">
+          <p class="img__description">Random</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container-fluid bg-1 text-center padding=20px">
+    <form class="input" method="SEARCH">
+      <input class="form-control form-entry" type="search" placeholder="Please input a Genre: Horror/Romance/Action/Heroes/Random" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+    </form>
+  </div>
 
   <footer>
       <p>&copy; 2023 Created by Bandwidth of Brothers!!</p>
