--- a/recommendations.html
+++ b/recommendations.html
@@ -69,35 +69,35 @@
   </div>
 
   <div class="row">
-    <span class="img__wrap column">
+    <span class="img__wrap col-sm-2">
       <img class="img-fluid" src="images/comedy.jpg"/>
       <div class="img__description_layer">
         <p class="img__description">Comedy</p>
       </div>
     </span>
 
-    <span class="img__wrap column">
+    <span class="img__wrap col-sm-2">
       <img class="img-fluid" src="images/action.jpeg"/>
       <div class="img__description_layer">
         <p class="img__description">Action</p>
       </div>
     </span>
 
-    <span class="img__wrap column">
+    <span class="img__wrap col-sm-2">
       <img class="img-fluid img_insert img" src="images/horror.jpg"/>
       <div class="img__description_layer">
         <p class="img__description">Horror</p>
       </div>
     </span>
 
-    <span class="img__wrap column">
+    <span class="img__wrap col-sm-2">
       <img class="img-fluid" src="images/heroes.jpg"/>
       <div class="img__description_layer">
         <p class="img__description">Super Heroes</p>
       </div>
     </span>
 
-    <span class="img__wrap column">
+    <span class="img__wrap col-sm-2">
       <img class="img-fluid" src="images/romance.jpeg"/>
       <div class="img__description_layer">
         <p class="img__description">Romance</p>
