--- a/info.html
+++ b/info.html
@@ -29,7 +29,7 @@
               <a class="nav-link" href="./info.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="recommendations.html">Recommendations</a>
+              <a class="nav-link" href="RECOMMENDATIONS2.html">Recommendations</a>
             </li>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
