footer added to all pages

--- a/info.html
+++ b/info.html
@@ -56,9 +56,18 @@
 <br>    
     Aliquam erat volutpat. Ut orci dolor, feugiat vel vehicula non, congue quis lorem. Suspendisse sollicitudin dignissim eros in blandit. Aenean bibendum massa nec odio consectetur, ut laoreet erat varius. Quisque lobortis accumsan nisl eu feugiat. Nulla facilisi. Vivamus dignissim ullamcorper nibh, ac ullamcorper dui tempor tincidunt. Cras at tortor massa. Etiam scelerisque tortor neque, ac pretium ex tincidunt quis. Maecenas convallis est at mi dictum, nec fringilla elit faucibus. Donec id est sed dolor varius lacinia. Nunc sit amet fermentum urna. Ut sagittis elementum purus, at blandit lorem varius ac. Etiam commodo nibh neque, mattis semper turpis porta a. Mauris rutrum facilisis pretium. Vestibulum et auctor libero, ut vulputate mi.
 </div>
-  <footer>
-      <p>&copy; 2023 Created by Bandwidth of Brothers!!</p>
+<div class="container">
+  <footer class="py-3 my-4">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="home.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+      <li class="nav-item"><a href="signup.html" class="nav-link px-2 text-body-secondary">Sign up</a></li>
+      <li class="nav-item"><a href="RECOMMENDATIONS2.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
+      <li class="nav-item"><a href="info.html" class="nav-link px-2 text-body-secondary">About</a></li>
+    </ul>
+    <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
   </footer>
+  
+</div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
   </body>
 </html>
