--- a/RECOMMENDATIONS2.html
+++ b/RECOMMENDATIONS2.html
@@ -49,11 +49,11 @@
       <h4>Need Inspiration? Tell us a Genre you fancy and our Movie Generator will suggest a film to watch!</h4>
     </div>
 
-
+<!-- replaced the - with = -->
   <div class="container-fluid bg-1 text-center padding=20px">
     <div class="row">
       <div class="img__wrap col-sm-4 columns">
-        <img class="image" src="images/comedy.jpg" alt-"Comedy movies"/>
+        <img class="image" src="images/comedy.jpg" alt="Comedy movies"/>
         <div class="img__description_layer">
           <p class="img__description">Comedy</p>
         </div>
@@ -107,9 +107,17 @@
     </form>
   </div>
 
-  <footer>
-      <p>&copy; 2023 Created by Bandwidth of Brothers!!</p>
-  </footer>
+  <div class="container">
+    <footer class="py-3 my-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item"><a href="home.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="signup.html" class="nav-link px-2 text-body-secondary">Sign up</a></li>
+        <li class="nav-item"><a href="RECOMMENDATIONS2.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
+        <li class="nav-item"><a href="info.html" class="nav-link px-2 text-body-secondary">About</a></li>
+      </ul>
+      <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
+    </footer>
+  </div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
