--- a/partners.html
+++ b/partners.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Pick'N'Flix</title>
+    <title>Pick'N'Flix - Our Partners</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link href= "styles/mainstyle.css" rel="stylesheet" type="text/css" />
 </head>
+
+<body>
+
+<h1>Coming Soon - Our Partners</h1>
+
+<a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec luctus venenatis odio quis sodales. Donec pulvinar vehicula hendrerit. Donec viverra diam quis augue laoreet, at pharetra velit sollicitudin. Nulla vel ligula lorem. Aliquam bibendum lobortis elementum. Nulla lobortis pellentesque turpis, in commodo metus posuere ut. Nullam varius turpis ex, vitae tempor nibh rhoncus quis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultrices metus eu lacinia lacinia. Nam bibendum placerat est, vel tempus metus varius quis. Phasellus viverra accumsan commodo. Donec pharetra massa eget molestie viverra.
+
+Sed maximus sapien non metus lobortis, eget vehicula tellus dignissim. Nunc gravida sapien eros, nec suscipit est ullamcorper varius. Sed molestie sem at nunc mollis, eget feugiat arcu sollicitudin. Phasellus convallis tristique eleifend. Aenean vitae lacus non augue lobortis malesuada. Aliquam at ultricies tortor, id elementum lorem. Quisque tristique tristique mattis. Fusce et tincidunt enim, et eleifend nibh.
+    
+Morbi ac ullamcorper neque, quis placerat diam. Etiam non egestas arcu. Vestibulum id elit at nunc luctus lobortis. Sed purus justo, porta nec bibendum vitae, aliquam at risus. Nullam vestibulum dictum sem, ac tempor ante ullamcorper non. In vehicula leo nisi, sit amet finibus est ullamcorper id. Maecenas blandit ut justo faucibus lacinia. Vivamus in venenatis quam. Sed eu elit elit. Morbi in lectus nisi.</a>
+
 
 <div class="container">
     <footer class="py-3 my-4">
@@ -35,5 +46,8 @@
     </footer>
   </div>
 
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>   
+  </body>
+
 </html>
-  
