--- a/home.html
+++ b/home.html
@@ -71,30 +71,48 @@
       <a href="index.html"><img src="images/pic_n_mix.png"  alt="logo" width="250"></a>
       <h1>Welcome to Pick'N'Fix!</h1>
       <h2>Your 1-Stop-Shop for all Cinema Listings, Movie Reviews and Recommendations!</h2>
-      </div>
+    </div>
+    <br>
 
-      <div class="container-fluid bg-3 text-center">
-      <h3>Know what you want to watch, but not where to see it? Our site will find all the local listings in your area!</h3>
+    <div class="container-fluid bg-3 text-center">
+      <h3>Know what you want to watch, but not where to see it?</h3>
+      <h3>Our site will find all the local listings in your area!</h3>
       <img src="images/Chickens_movies.jpg" alt="Chickens_movies" width="250">
-      </div>
+    </div>
       
-      <div class="container-fluid bg-2 text-center">
-        <h4>Need Inspiration? Tell us a Genre you fancy and our Movie Generator will suggest a film to watch!</h4>
-        <img src="images/chick1.jpg" alt="chick1" width="250">
-      </div>
+    <div class="container-fluid bg-2 text-center">
+      <h4>Need Inspiration? Tell us a Genre you fancy and our Movie Generator will suggest a film to watch!</h4>
+      <img src="images/chick1.jpg" alt="chick1" width="250">
+    </div>
 
-      <div class="container-fluid bg-4 text-center">
-        <h4>Want to check out Reviews of the latest Movies? We have you covered! </h4>
-        <img src="images/chick2jpg.jpg" alt="chick2" width="250">
-      </div>
+    <div class="container-fluid bg-4 text-center">
+      <h4>Want to check out Reviews of the latest Movies?</h4>
+      <h4> We have you covered! </h4>
+      <img src="images/chick2jpg.jpg" alt="chick2" width="250">
+    </div>
 
       <div class="container">
         <footer class="py-3 my-4">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="home.html" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="signup.html" class="nav-link px-2 text-body-secondary">Sign up</a></li>
-            <li class="nav-item"><a href="RECOMMENDATIONS2.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
-            <li class="nav-item"><a href="info.html" class="nav-link px-2 text-body-secondary">About</a></li>
+            <lr>
+              <li class="nav-item"><a href="home.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+              <li class="nav-item"><a href="signup.html" class="nav-link px-2 text-body-secondary">Sign up</a></li>
+            </lr>
+            <lr>
+              <li class="nav-item"><a href="RECOMMENDATIONS2.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
+            </lr>
+            <lr>
+              <li class="nav-item"><a href="partners.html" class="nav-link px-2 text-body-secondary">Our Partners</a></li>
+              <li class="nav-item"><a href="info.html" class="nav-link px-2 text-body-secondary">About</a></li>
+            </lr>
+            <lr>
+              <li class="nav-item"><a href="terms.html" class="nav-link px-2 text-body-secondary">Terms & conditions</a></li>
+              <li class="nav-item"><a href="faqs.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+            </lr>
+            <lr>
+              <li class="nav-item"><a href="cookies.html" class="nav-link px-2 text-body-secondary">Manage Cookies</a></li>
+              <li class="nav-item"><a href="privacypolicy.html" class="nav-link px-2 text-body-secondary">Privacy Policy</a></li>
+            </lr>
           </ul>
           <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
         </footer>
