--- a/info.html
+++ b/info.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Pick'N'Flix - Coming Soon</title>
+    <title>Pick'N'Flix - About Us</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link href= "styles/holding_page.css" rel="stylesheet" type="text/css" />
     <link href= "styles/mainstyle.css" rel="stylesheet" type="text/css" />
   </head>
-<body>
-    <h1>Coming Soon</h1>
 
+<body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid navbar">
         <a class="navbar-brand" href="./index.html">Pick'N'Flix</a>
@@ -39,35 +38,53 @@
         </div>
       </div>
     </nav>
+
+  
+<div class="container-fluid bg-1 text-center">
+  <a href="index.html"><img src="images/pic_n_mix.png"  alt="logo" width="250"></a>
+
+<h1>Pick 'N' Flix - About Us</h1>
+
 <div class="container-fluid bg-4 text-center">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-    Integer ornare tempus tortor. 
-    Mauris non bibendum purus, quis cursus felis. 
-    In hac habitasse platea dictumst. 
-    Donec vitae mattis dui. 
-    Vestibulum tincidunt, ante eget mollis feugiat, arcu lorem ullamcorper diam, nec semper mauris nibh non mauris. 
-    Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse malesuada nisl erat, ut aliquam quam feugiat ut. Maecenas dictum mauris eu tellus fringilla, sed euismod velit pulvinar. In in scelerisque sem. Proin dignissim suscipit magna, non volutpat turpis. Proin id nulla placerat tellus sollicitudin pellentesque non eu urna. Praesent bibendum vitae sem in porta. Suspendisse convallis, nibh ut volutpat fringilla, mauris arcu malesuada metus, porttitor porta diam augue vitae purus. Phasellus pharetra lobortis augue, eu consequat sem. Fusce semper dui in purus varius, non ornare nisi tincidunt. Mauris placerat eu mi facilisis commodo.
-<br>
-    Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras pretium accumsan quam congue venenatis. Maecenas quis sollicitudin tortor, in dignissim ipsum. Pellentesque blandit neque quam, id auctor odio egestas sit amet. In aliquet, sem nec finibus faucibus, lacus dolor pretium tellus, non convallis nisi nunc in mi. Integer sit amet sapien ut odio suscipit commodo quis sit amet ante. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc efficitur bibendum dignissim.
-<br>    
-    Nullam cursus auctor erat, ac condimentum risus porta a. Morbi mauris ligula, convallis vitae nibh eget, tincidunt tristique nisl. Fusce et odio nisi. Nullam quis mollis lectus. Pellentesque sit amet eros ac enim lacinia ornare. Praesent mauris ante, dictum dignissim augue eget, pretium blandit tellus. Aenean at dui nec ante iaculis rhoncus. Vestibulum luctus feugiat condimentum. Sed maximus laoreet erat, sit amet mollis magna dignissim vel. Curabitur mattis dui vel nisl dictum pulvinar. Quisque nec porttitor erat. Integer sodales neque et tincidunt efficitur. Phasellus cursus, velit quis accumsan consectetur, urna ipsum elementum nunc, eu porttitor enim felis id risus. Nulla et felis maximus, luctus metus sed, lobortis odio. Nullam interdum, nunc nec hendrerit convallis, leo nunc semper velit, a condimentum purus ex id ante. Suspendisse fermentum nunc lectus, vitae efficitur lorem consequat sit amet.
-<br>    
-    Curabitur eleifend porta nisi, at dapibus lacus. Proin imperdiet congue sapien nec rutrum. In cursus arcu nec enim sagittis sodales vitae at nisl. Vestibulum ac odio euismod, convallis ipsum a, interdum nibh. Aliquam posuere molestie sapien tempus faucibus. Ut ac feugiat dolor. Quisque pharetra purus dolor, non molestie ex iaculis id. Duis elementum est vulputate quam egestas euismod. Maecenas tempus lacinia imperdiet. Etiam non ipsum eros. Aliquam orci mi, molestie non justo non, aliquam vestibulum nisi. Aenean consequat et ex suscipit sollicitudin. Sed sit amet dolor feugiat, imperdiet est vitae, mattis quam. Integer dapibus velit sit amet lacus condimentum, ut molestie sem aliquam. Ut ex mauris, malesuada non massa in, vestibulum ornare leo. Aliquam sagittis sodales varius.
-<br>    
-    Aliquam erat volutpat. Ut orci dolor, feugiat vel vehicula non, congue quis lorem. Suspendisse sollicitudin dignissim eros in blandit. Aenean bibendum massa nec odio consectetur, ut laoreet erat varius. Quisque lobortis accumsan nisl eu feugiat. Nulla facilisi. Vivamus dignissim ullamcorper nibh, ac ullamcorper dui tempor tincidunt. Cras at tortor massa. Etiam scelerisque tortor neque, ac pretium ex tincidunt quis. Maecenas convallis est at mi dictum, nec fringilla elit faucibus. Donec id est sed dolor varius lacinia. Nunc sit amet fermentum urna. Ut sagittis elementum purus, at blandit lorem varius ac. Etiam commodo nibh neque, mattis semper turpis porta a. Mauris rutrum facilisis pretium. Vestibulum et auctor libero, ut vulputate mi.
+  Pick n’Flix was created by 6 guys who love to watch movies yet found the whole booking experience rather frustrating! 
+<br><br>
+  Ever tried to organise a movie night out with a group of friends? Maybe you want to treat your significant other to a movie on your date night? Maybe you just want to watch a specific movie on your own, but have limited time to do so? 
+<br><br>    
+  We found that most regions in the UK have several brands of Cinema to choose from in their locality, friends then ended up on different sites researching the same movie and arriving at different screen times. We also found that toggling between sites to locate a showing to suit your timeframe was equally irritating. 
+<br><br>    
+  This led to the birth of Pick n’ Flix, we’re all delighted that you’re here and hope you find the site useful. It is here that you can search for a particular film title by time of showing or location, you can search for Cinemas local to you to see what’s on. You can compare, choose and be taken straight to the showing that suits you best to book. You can get recommendations, create a free account and have a particular location or preferred theatres stored ready for your use. At Pick n’ Flix you are not limited to searching by Cinema brand, we want it to be our mission to make your movie going experience better, more enjoyable and less time consuming. 
+<br><br>    
+  Welcome to our site, we hope you create an account and continue your movie watching with us.
 </div>
+
 <div class="container">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="home.html" class="nav-link px-2 text-body-secondary">Home</a></li>
-      <li class="nav-item"><a href="signup.html" class="nav-link px-2 text-body-secondary">Sign up</a></li>
-      <li class="nav-item"><a href="RECOMMENDATIONS2.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
-      <li class="nav-item"><a href="info.html" class="nav-link px-2 text-body-secondary">About</a></li>
+      <lr>
+        <li class="nav-item"><a href="home.html" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a href="signup.html" class="nav-link px-2 text-body-secondary">Sign up</a></li>
+      </lr>
+      <lr>
+        <li class="nav-item"><a href="RECOMMENDATIONS2.html" class="nav-link px-2 text-body-secondary">Recommendations</a></li>
+      </lr>
+      <lr>
+        <li class="nav-item"><a href="partners.html" class="nav-link px-2 text-body-secondary">Our Partners</a></li>
+        <li class="nav-item"><a href="info.html" class="nav-link px-2 text-body-secondary">About</a></li>
+      </lr>
+      <lr>
+        <li class="nav-item"><a href="terms.html" class="nav-link px-2 text-body-secondary">Terms & conditions</a></li>
+        <li class="nav-item"><a href="faqs.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+      </lr>
+      <lr>
+        <li class="nav-item"><a href="cookies.html" class="nav-link px-2 text-body-secondary">Manage Cookies</a></li>
+        <li class="nav-item"><a href="privacypolicy.html" class="nav-link px-2 text-body-secondary">Privacy Policy</a></li>
+      </lr>
     </ul>
     <p class="text-center text-body-secondary">&copy; 2023 Created by Bandwidth of Brothers!!</p>
   </footer>
-  
 </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-  </body>
+</body>
+
 </html>
